--- a/newtons_method.ipynb
+++ b/newtons_method.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "97921a81",
+   "id": "f7505103",
    "metadata": {},
    "source": [
     "# Newton’s Method via JAX"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ff533a2d",
+   "id": "1abbc3f4",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "df0e845a",
+   "id": "abfdf72d",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -50,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e9353193",
+   "id": "d84da9a3",
    "metadata": {
     "hide-output": false
    },
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "226070ec",
+   "id": "1717dc7f",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -73,7 +73,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c2045823",
+   "id": "99de8de6",
    "metadata": {
     "hide-output": false
    },
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "955fd7a4",
+   "id": "89e93a56",
    "metadata": {},
    "source": [
     "## Newton in one dimension\n",
@@ -109,7 +109,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "148d171f",
+   "id": "77546965",
    "metadata": {
     "hide-output": false
    },
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b5e47530",
+   "id": "5d96fa01",
    "metadata": {},
    "source": [
     "The code above uses automatic differentiation to calculate $ f' $ via the call to `jax.grad`.\n",
@@ -143,7 +143,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b05b2450",
+   "id": "78a1310e",
    "metadata": {
     "hide-output": false
    },
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a73c8263",
+   "id": "88bf94a2",
    "metadata": {},
    "source": [
     "Here we go"
@@ -172,7 +172,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ca36d583",
+   "id": "83be6cb3",
    "metadata": {
     "hide-output": false
    },
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aac1038c",
+   "id": "92317907",
    "metadata": {},
    "source": [
     "This number looks to be close to the root, given the figure."
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3722f41b",
+   "id": "de228e67",
    "metadata": {},
    "source": [
     "## An Equilibrium Problem\n",
@@ -243,7 +243,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c9e049dd",
+   "id": "b5d5e752",
    "metadata": {
     "hide-output": false
    },
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3853d53b",
+   "id": "f088db63",
    "metadata": {},
    "source": [
     "## Computation\n",
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "933c01ab",
+   "id": "6bbbb752",
    "metadata": {},
    "source": [
     "### Newton’s Method\n",
@@ -290,7 +290,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "03692b2d",
+   "id": "941b7cff",
    "metadata": {
     "hide-output": false
    },
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9c2ab1fb",
+   "id": "cc6a114c",
    "metadata": {},
    "source": [
     "### Application\n",
@@ -335,7 +335,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "49d76961",
+   "id": "3acd81a1",
    "metadata": {
     "hide-output": false
    },
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "01e75450",
+   "id": "310b7b4f",
    "metadata": {},
    "source": [
     "Here’s our initial condition $ p_0 $"
@@ -366,7 +366,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ccae93fc",
+   "id": "6f1efa4d",
    "metadata": {
     "hide-output": false
    },
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c3b0de86",
+   "id": "096340a7",
    "metadata": {},
    "source": [
     "By combining the power of Newton’s method, JAX accelerated linear algebra,\n",
@@ -388,7 +388,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "67f94d7a",
+   "id": "8168d266",
    "metadata": {
     "hide-output": false
    },
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "abcc7847",
+   "id": "6ab86042",
    "metadata": {},
    "source": [
     "Here’s the size of the error:"
@@ -410,7 +410,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "371140de",
+   "id": "7e58ddf2",
    "metadata": {
     "hide-output": false
    },
@@ -421,7 +421,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ead9604a",
+   "id": "65461010",
    "metadata": {},
    "source": [
     "With the same tolerance, SciPy’s `root` function takes much longer to run,\n",
@@ -431,7 +431,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cb7f6e4d",
+   "id": "3779991d",
    "metadata": {
     "hide-output": false
    },
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2aca921f",
+   "id": "8ac3e01d",
    "metadata": {},
    "source": [
     "The result is also slightly less accurate:"
@@ -457,7 +457,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e37a5b37",
+   "id": "ffc08054",
    "metadata": {
     "hide-output": false
    },
@@ -469,7 +469,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4aa890c1",
+   "id": "2c0dea77",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -477,7 +477,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ccc41fcb",
+   "id": "2a173bdc",
    "metadata": {},
    "source": [
     "## Exercise 3.1\n",
@@ -537,7 +537,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "139136d8",
+   "id": "b011b2ee",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 3.1](https://jax.quantecon.org/#newton_ex1)\n",
@@ -548,7 +548,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2dc6c4fc",
+   "id": "fc8d61f4",
    "metadata": {
     "hide-output": false
    },
@@ -567,7 +567,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "220e28f0",
+   "id": "ffb60d48",
    "metadata": {},
    "source": [
     "Then we define the multivariate version of the formula for the [law of motion of capital](https://python.quantecon.org/newton_method.html#solow)"
@@ -576,7 +576,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fb289f82",
+   "id": "c283b6ec",
    "metadata": {
     "hide-output": false
    },
@@ -588,7 +588,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "35d91db6",
+   "id": "4aa42412",
    "metadata": {},
    "source": [
     "Let’s run through each starting value and see the output"
@@ -597,7 +597,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "072ea97b",
+   "id": "cbab19a7",
    "metadata": {
     "hide-output": false
    },
@@ -614,7 +614,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "56e262ff",
+   "id": "ca941a22",
    "metadata": {},
    "source": [
     "We find that the results are invariant to the starting values.\n",
@@ -627,7 +627,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "24f0e6b1",
+   "id": "555edadd",
    "metadata": {
     "hide-output": false
    },
@@ -638,7 +638,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ab07ee06",
+   "id": "0fdb14da",
    "metadata": {},
    "source": [
     "Note the error is very small.\n",
@@ -649,7 +649,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ef585376",
+   "id": "7f44c590",
    "metadata": {
     "hide-output": false
    },
@@ -668,7 +668,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d4c98a93",
+   "id": "afb2396b",
    "metadata": {},
    "source": [
     "The result is very close to the true solution but still slightly different.\n",
@@ -679,7 +679,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "19ff3a02",
+   "id": "fad97b9f",
    "metadata": {
     "hide-output": false
    },
@@ -696,7 +696,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5b0ff892",
+   "id": "bfaefc2e",
    "metadata": {},
    "source": [
     "We can see it steps towards a more accurate solution."
@@ -704,7 +704,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0b643a03",
+   "id": "2a9a2df5",
    "metadata": {},
    "source": [
     "## Exercise 3.2\n",
@@ -750,7 +750,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2e3f24cb",
+   "id": "066f7885",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 3.2](https://jax.quantecon.org/#newton_ex2)\n",
@@ -761,7 +761,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4875534b",
+   "id": "8f67ef02",
    "metadata": {
     "hide-output": false
    },
@@ -780,7 +780,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "67d2a45a",
+   "id": "4e5a1493",
    "metadata": {},
    "source": [
     "Let’s run through each initial guess and check the output"
@@ -789,7 +789,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16a6394a",
+   "id": "8b65beec",
    "metadata": {
     "hide-output": false
    },
@@ -808,7 +808,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "92031194",
+   "id": "890a62d2",
    "metadata": {},
    "source": [
     "We can find that Newton’s method may fail for some starting values.\n",
@@ -821,7 +821,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5cd6bd9f",
+   "id": "9064cfcd",
    "metadata": {
     "hide-output": false
    },
@@ -832,7 +832,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "148cac0b",
+   "id": "520811b1",
    "metadata": {},
    "source": [
     "We can see the result is very accurate."
@@ -840,7 +840,7 @@
   }
  ],
  "metadata": {
-  "date": 1709695940.4580266,
+  "date": 1709777244.107965,
   "filename": "newtons_method.md",
   "kernelspec": {
    "display_name": "Python",
