--- a/status.ipynb
+++ b/status.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "2e07f065",
+   "id": "129ff573",
    "metadata": {},
    "source": [
     "# Execution Statistics\n",
@@ -11,24 +11,24 @@
     "\n",
     "[](https://jax.quantecon.org/aiyagari_jax.html)[](https://jax.quantecon.org/arellano.html)[](https://jax.quantecon.org/cake_eating_numerical.html)[](https://jax.quantecon.org/ifp_egm.html)[](https://jax.quantecon.org/intro.html)[](https://jax.quantecon.org/inventory_dynamics.html)[](https://jax.quantecon.org/jax_intro.html)[](https://jax.quantecon.org/kesten_processes.html)[](https://jax.quantecon.org/markov_asset.html)[](https://jax.quantecon.org/mle.html)[](https://jax.quantecon.org/newtons_method.html)[](https://jax.quantecon.org/opt_invest.html)[](https://jax.quantecon.org/opt_savings.html)[](https://jax.quantecon.org/short_path.html)[](https://jax.quantecon.org/.html)[](https://jax.quantecon.org/troubleshooting.html)[](https://jax.quantecon.org/wealth_dynamics.html)[](https://jax.quantecon.org/zreferences.html)|Document|Modified|Method|Run Time (s)|Status|\n",
     "|:------------------:|:------------------:|:------------------:|:------------------:|:------------------:|\n",
-    "|aiyagari_jax|2024-03-05 09:21|cache|72.34|✅|\n",
-    "|arellano|2024-03-05 09:21|cache|28.64|✅|\n",
-    "|cake_eating_numerical|2024-03-05 09:21|cache|19.75|✅|\n",
-    "|ifp_egm|2024-03-05 09:24|cache|183.07|✅|\n",
-    "|intro|2024-03-05 09:24|cache|1.28|✅|\n",
-    "|inventory_dynamics|2024-03-05 09:32|cache|436.07|✅|\n",
-    "|jax_intro|2024-03-05 09:32|cache|26.69|✅|\n",
-    "|kesten_processes|2024-03-05 09:33|cache|22.03|✅|\n",
-    "|markov_asset|2024-03-05 09:33|cache|18.4|✅|\n",
-    "|mle|2024-03-05 09:33|cache|15.64|✅|\n",
-    "|newtons_method|2024-03-05 09:36|cache|163.45|✅|\n",
-    "|opt_invest|2024-03-05 09:37|cache|45.04|✅|\n",
-    "|opt_savings|2024-03-05 09:37|cache|22.03|✅|\n",
-    "|short_path|2024-03-05 09:37|cache|6.84|✅|\n",
-    "|status|2024-03-05 09:37|cache|3.84|✅|\n",
-    "|troubleshooting|2024-03-05 09:24|cache|1.28|✅|\n",
-    "|wealth_dynamics|2024-03-05 09:38|cache|25.46|✅|\n",
-    "|zreferences|2024-03-05 09:24|cache|1.28|✅|\n",
+    "|aiyagari_jax|2024-03-07 01:44|cache|70.1|✅|\n",
+    "|arellano|2024-03-07 01:45|cache|29.03|✅|\n",
+    "|cake_eating_numerical|2024-03-07 01:45|cache|19.0|✅|\n",
+    "|ifp_egm|2024-03-07 01:48|cache|178.53|✅|\n",
+    "|intro|2024-03-07 01:48|cache|1.16|✅|\n",
+    "|inventory_dynamics|2024-03-07 01:55|cache|441.15|✅|\n",
+    "|jax_intro|2024-03-07 01:56|cache|25.57|✅|\n",
+    "|kesten_processes|2024-03-07 01:56|cache|20.6|✅|\n",
+    "|markov_asset|2024-03-07 01:56|cache|19.02|✅|\n",
+    "|mle|2024-03-07 01:57|cache|14.54|✅|\n",
+    "|newtons_method|2024-03-07 01:59|cache|161.07|✅|\n",
+    "|opt_invest|2024-03-07 02:00|cache|44.03|✅|\n",
+    "|opt_savings|2024-03-07 02:00|cache|20.02|✅|\n",
+    "|short_path|2024-03-07 02:01|cache|6.64|✅|\n",
+    "|status|2024-03-07 02:01|cache|3.95|✅|\n",
+    "|troubleshooting|2024-03-07 01:48|cache|1.16|✅|\n",
+    "|wealth_dynamics|2024-03-07 02:01|cache|24.42|✅|\n",
+    "|zreferences|2024-03-07 01:48|cache|1.16|✅|\n",
     "\n",
     "<a id='status-machine-details'></a>\n",
     "These lectures are built on `linux` instances through `github actions`  and `amazon web services (aws)` to\n",
@@ -41,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3d472d2a",
+   "id": "85e33504",
    "metadata": {
     "hide-output": false
    },
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d95c1c1b",
+   "id": "a57933b6",
    "metadata": {},
    "source": [
     "and the hardware we are running on:"
@@ -63,7 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2d22c52e",
+   "id": "1bed6257",
    "metadata": {
     "hide-output": false
    },
@@ -74,7 +74,7 @@
   }
  ],
  "metadata": {
-  "date": 1709695940.5662794,
+  "date": 1709777244.213311,
   "filename": "status.md",
   "kernelspec": {
    "display_name": "Python",
