--- a/zreferences.ipynb
+++ b/zreferences.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "dd3a4a1b",
+   "id": "298dcaaa",
    "metadata": {},
    "source": [
     "\n",
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cbc80c8c",
+   "id": "f8b4b56e",
    "metadata": {},
    "source": [
     "# References\n",
@@ -25,7 +25,7 @@
   }
  ],
  "metadata": {
-  "date": 1709695940.6233828,
+  "date": 1709777244.269397,
   "filename": "zreferences.md",
   "kernelspec": {
    "display_name": "Python",
