--- a/cake_eating_numerical.ipynb
+++ b/cake_eating_numerical.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "14f641ae",
+   "id": "bdd77d09",
    "metadata": {},
    "source": [
     "# Cake Eating: Numerical Methods"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "12afce02",
+   "id": "d3868eea",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -31,7 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1e3b506d",
+   "id": "36f56497",
    "metadata": {
     "hide-output": false
    },
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c5eceec9",
+   "id": "7b9c625d",
    "metadata": {},
    "source": [
     "We will use the following imports."
@@ -51,7 +51,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ea8d6848",
+   "id": "0d37579b",
    "metadata": {
     "hide-output": false
    },
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "020fe436",
+   "id": "6534848b",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -75,7 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "008c86c1",
+   "id": "82d42ee0",
    "metadata": {
     "hide-output": false
    },
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e5629e8f",
+   "id": "1370aa38",
    "metadata": {},
    "source": [
     "## Reviewing the Model\n",
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "60a7f804",
+   "id": "229a5d59",
    "metadata": {},
    "source": [
     "## Implementation using JAX\n",
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c27f7ebd",
+   "id": "86db7e86",
    "metadata": {
     "hide-output": false
    },
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "869e2633",
+   "id": "b85363e6",
    "metadata": {},
    "source": [
     "Let’s define a model to represent the Cake Eating Problem."
@@ -143,7 +143,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c5962459",
+   "id": "bd8b5f75",
    "metadata": {
     "hide-output": false
    },
@@ -156,7 +156,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "44d79429",
+   "id": "b230fb45",
    "metadata": {
     "hide-output": false
    },
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2f47367d",
+   "id": "f9c13ae1",
    "metadata": {},
    "source": [
     "Now let’s define the CRRA utility function."
@@ -185,7 +185,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c7da6fd8",
+   "id": "73551432",
    "metadata": {
     "hide-output": false
    },
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5ba28e31",
+   "id": "73851ef0",
    "metadata": {},
    "source": [
     "### The Bellman Operator\n",
@@ -221,7 +221,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11387c59",
+   "id": "86dba99d",
    "metadata": {
     "hide-output": false
    },
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "34a53aad",
+   "id": "6a648b22",
    "metadata": {},
    "source": [
     "In order to create a vectorized function using `state_action_value`, we use [jax.vmap](https://jax.readthedocs.io/en/latest/_autosummary/jax.vmap.html).\n",
@@ -254,7 +254,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a0859e60",
+   "id": "3261b632",
    "metadata": {
     "hide-output": false
    },
@@ -266,7 +266,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7e2c188a",
+   "id": "703ebdd4",
    "metadata": {
     "hide-output": false
    },
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9de5aba7",
+   "id": "978f2ec6",
    "metadata": {},
    "source": [
     "Let’s start by creating a Cake Eating Model instance using the default parameterization."
@@ -295,7 +295,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b1938162",
+   "id": "3ce10100",
    "metadata": {
     "hide-output": false
    },
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b294fd68",
+   "id": "d46662a3",
    "metadata": {},
    "source": [
     "Now let’s see the iteration of the value function in action.\n",
@@ -318,7 +318,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "879837a0",
+   "id": "caacbd5c",
    "metadata": {
     "hide-output": false
    },
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "197af376",
+   "id": "2cd6c0ad",
    "metadata": {},
    "source": [
     "Let’s introduce a wrapper function called `compute_value_function`\n",
@@ -357,7 +357,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c625e568",
+   "id": "da992987",
    "metadata": {
     "hide-output": false
    },
@@ -396,7 +396,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "91b35c47",
+   "id": "fa2fcb24",
    "metadata": {
     "hide-output": false
    },
@@ -410,7 +410,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0d758fb3",
+   "id": "27a2ee7c",
    "metadata": {
     "hide-output": false
    },
@@ -428,7 +428,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "82d42642",
+   "id": "acf68728",
    "metadata": {},
    "source": [
     "Next let’s compare it to the analytical solution."
@@ -437,7 +437,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c4ff85a4",
+   "id": "07153d72",
    "metadata": {
     "hide-output": false
    },
@@ -449,7 +449,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2f7b7487",
+   "id": "e2751543",
    "metadata": {
     "hide-output": false
    },
@@ -468,7 +468,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "49bbafcb",
+   "id": "59b37279",
    "metadata": {},
    "source": [
     "### Policy Function\n",
@@ -498,7 +498,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5088e5e7",
+   "id": "03863947",
    "metadata": {
     "hide-output": false
    },
@@ -520,7 +520,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7313527a",
+   "id": "0fb9f9e4",
    "metadata": {},
    "source": [
     "Now let’s pass the approximate value function and compute optimal consumption:"
@@ -529,7 +529,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "89240671",
+   "id": "31296724",
    "metadata": {
     "hide-output": false
    },
@@ -540,7 +540,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d24d846d",
+   "id": "d56e5b6e",
    "metadata": {},
    "source": [
     "Let’s plot this next to the true analytical solution"
@@ -549,7 +549,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c2b8234c",
+   "id": "67011849",
    "metadata": {
     "hide-output": false
    },
@@ -570,7 +570,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8fdd134a",
+   "id": "96e1112a",
    "metadata": {},
    "source": [
     "## Numba implementation\n",
@@ -582,7 +582,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e48dcdd3",
+   "id": "4f8cdee6",
    "metadata": {
     "hide-output": false
    },
@@ -596,7 +596,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5caf1627",
+   "id": "af8a8177",
    "metadata": {
     "hide-output": false
    },
@@ -609,7 +609,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d8144ffc",
+   "id": "7076be6f",
    "metadata": {
     "hide-output": false
    },
@@ -627,7 +627,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7a1524dd",
+   "id": "40268eea",
    "metadata": {
     "hide-output": false
    },
@@ -642,7 +642,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3c62b9ca",
+   "id": "c31ebf1e",
    "metadata": {
     "hide-output": false
    },
@@ -663,7 +663,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "39e92e91",
+   "id": "09b91e2e",
    "metadata": {
     "hide-output": false
    },
@@ -690,7 +690,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6466c4b8",
+   "id": "0b02ca1b",
    "metadata": {
     "hide-output": false
    },
@@ -729,7 +729,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7b8a026b",
+   "id": "20541f1f",
    "metadata": {
     "hide-output": false
    },
@@ -741,7 +741,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "843b2cff",
+   "id": "fd8c60df",
    "metadata": {
     "hide-output": false
    },
@@ -755,7 +755,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "75adc081",
+   "id": "304a8bfb",
    "metadata": {
     "hide-output": false
    },
@@ -769,7 +769,7 @@
   }
  ],
  "metadata": {
-  "date": 1709695940.001968,
+  "date": 1709777243.6738496,
   "filename": "cake_eating_numerical.md",
   "kernelspec": {
    "display_name": "Python",
