--- a/ifp_egm.ipynb
+++ b/ifp_egm.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "cc18f94b",
+   "id": "866dfdcf",
    "metadata": {},
    "source": [
     "# Endogenous Grid Method"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e8a343dd",
+   "id": "6719a67a",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fcd5ed34",
+   "id": "d6dca02b",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -43,7 +43,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "938dfe92",
+   "id": "adcf30c0",
    "metadata": {
     "hide-output": false
    },
@@ -55,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4b205c60",
+   "id": "176ef57c",
    "metadata": {
     "hide-output": false
    },
@@ -66,14 +66,12 @@
     "import numpy as np\n",
     "import jax\n",
     "import jax.numpy as jnp\n",
-    "\n",
-    "from numba import njit, float64\n",
-    "from numba.experimental import jitclass"
+    "import numba"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "22a8934b",
+   "id": "c64e064f",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -82,7 +80,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ffc97403",
+   "id": "964c39f8",
    "metadata": {
     "hide-output": false
    },
@@ -93,7 +91,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f5b5f629",
+   "id": "b705fffd",
    "metadata": {},
    "source": [
     "We use 64 bit floating point numbers for extra precision."
@@ -102,7 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8c48d681",
+   "id": "a3e87656",
    "metadata": {
     "hide-output": false
    },
@@ -113,7 +111,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1cff2b4d",
+   "id": "d197b135",
    "metadata": {},
    "source": [
     "## Setup\n",
@@ -159,7 +157,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7bbe99a6",
+   "id": "6d8f18ec",
    "metadata": {
     "hide-output": false
    },
@@ -174,25 +172,24 @@
     "        ν=0.02,             # income volatility\n",
     "        y_size=25):         # income grid size\n",
     "  \n",
+    "    # require R β < 1 for convergence\n",
+    "    assert R * β < 1, \"Stability condition failed.\"\n",
     "    # Create income Markov chain\n",
     "    mc = qe.tauchen(y_size, ρ, ν)\n",
     "    y_grid, P = jnp.exp(mc.state_values), mc.P\n",
     "    # Shift to JAX arrays\n",
     "    P, y_grid = jax.device_put((P, y_grid))\n",
-    "    \n",
     "    s_grid = jnp.linspace(0, s_max, s_size)\n",
+    "    # Pack and return\n",
+    "    constants = β, R, γ\n",
     "    sizes = s_size, y_size\n",
-    "    s_grid, y_grid, P = jax.device_put((s_grid, y_grid, P))\n",
-    "\n",
-    "    # require R β < 1 for convergence\n",
-    "    assert R * β < 1, \"Stability condition violated.\"\n",
-    "        \n",
-    "    return (β, R, γ), sizes, (s_grid, y_grid, P)"
+    "    arrays = s_grid, y_grid, P\n",
+    "    return constants, sizes, arrays"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "6f64d77e",
+   "id": "7e15be1e",
    "metadata": {},
    "source": [
     "## Solution method\n",
@@ -214,7 +211,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "334f2b08",
+   "id": "cbf2d474",
    "metadata": {},
    "source": [
     "### Euler equation\n",
@@ -383,7 +380,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e1449f8b",
+   "id": "03ea77f1",
    "metadata": {},
    "source": [
     "### JAX version\n",
@@ -399,7 +396,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e876f9ac",
+   "id": "5399c6fe",
    "metadata": {
     "hide-output": false
    },
@@ -419,8 +416,8 @@
     "    def u_prime(c):\n",
     "        return c**(-γ)\n",
     "\n",
-    "    def u_prime_inv(u_prime):\n",
-    "            return u_prime**(-1/γ)\n",
+    "    def u_prime_inv(u):\n",
+    "            return u**(-1/γ)\n",
     "\n",
     "    # Linearly interpolate σ(a, y)\n",
     "    def σ(a, y):\n",
@@ -455,7 +452,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "50b2533e",
+   "id": "c68d4a42",
    "metadata": {},
    "source": [
     "Then we use `jax.jit` to compile $ K $.\n",
@@ -466,7 +463,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f35deb83",
+   "id": "7139df56",
    "metadata": {
     "hide-output": false
    },
@@ -477,7 +474,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "89e9f1ed",
+   "id": "64862f1f",
    "metadata": {},
    "source": [
     "Next we define a successive approximator that repeatedly applies $ K $."
@@ -486,7 +483,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "84863a01",
+   "id": "b04c4891",
    "metadata": {
     "hide-output": false
    },
@@ -500,7 +497,6 @@
     "\n",
     "    # Unpack\n",
     "    constants, sizes, arrays = model\n",
-    "    \n",
     "    β, R, γ = constants\n",
     "    s_size, y_size = sizes\n",
     "    s_grid, y_grid, P = arrays\n",
@@ -532,7 +528,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "06638f4b",
+   "id": "ec2195b0",
    "metadata": {},
    "source": [
     "### Numba version\n",
@@ -549,75 +545,30 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "06e05dcb",
+   "id": "2924df97",
    "metadata": {
     "hide-output": false
    },
    "outputs": [],
    "source": [
-    "ifp_data = [\n",
-    "    ('R', float64),              \n",
-    "    ('β', float64),             \n",
-    "    ('γ', float64),            \n",
-    "    ('P', float64[:, :]),     \n",
-    "    ('y_grid', float64[:]),  \n",
-    "    ('s_grid', float64[:])    \n",
-    "]\n",
-    "\n",
-    "# Use the JAX IFP data as our defaults for the Numba version\n",
-    "model = ifp()\n",
-    "constants, sizes, arrays = model\n",
-    "β, R, γ = constants\n",
-    "s_size, y_size = sizes\n",
-    "s_grid, y_grid, P = (np.array(a) for a in arrays)\n",
-    "\n",
-    "@jitclass(ifp_data)\n",
-    "class IFP:\n",
-    "\n",
-    "    def __init__(self,\n",
-    "                 R=R,\n",
-    "                 β=β,\n",
-    "                 γ=γ,\n",
-    "                 P=np.array(P),\n",
-    "                 y_grid=np.array(y_grid),\n",
-    "                 s_grid=s_grid):\n",
-    "\n",
-    "        self.R, self.β, self.γ = R, β, γ\n",
-    "        self.P, self.y_grid = P, y_grid\n",
-    "        self.s_grid = s_grid\n",
-    "\n",
-    "        # Recall that we need R β < 1 for convergence.\n",
-    "        assert self.R * self.β < 1, \"Stability condition violated.\"\n",
-    "\n",
-    "    def u_prime(self, c):\n",
-    "        return c**(-self.γ)\n",
-    "    \n",
-    "    def u_prime_inv(self, u_prime):\n",
-    "        return u_prime**(-1/self.γ)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ba57c233",
-   "metadata": {
-    "hide-output": false
-   },
-   "outputs": [],
-   "source": [
-    "@njit\n",
-    "def K_egm_nb(a_in, σ_in, ifp):\n",
+    "@numba.jit\n",
+    "def K_egm_nb(a_in, σ_in, constants, sizes, arrays):\n",
     "    \"\"\"\n",
     "    The operator K using Numba.\n",
     "\n",
     "    \"\"\"\n",
     "    \n",
     "    # Simplify names\n",
-    "    R, P, y_grid, β, γ  = ifp.R, ifp.P, ifp.y_grid, ifp.β, ifp.γ\n",
-    "    s_grid, u_prime = ifp.s_grid, ifp.u_prime\n",
-    "    u_prime_inv = ifp.u_prime_inv\n",
-    "    n = len(y_grid)\n",
-    "    \n",
+    "    β, R, γ = constants\n",
+    "    s_size, y_size = sizes\n",
+    "    s_grid, y_grid, P = arrays\n",
+    "\n",
+    "    def u_prime(c):\n",
+    "        return c**(-γ)\n",
+    "\n",
+    "    def u_prime_inv(u):\n",
+    "        return u**(-1/γ)\n",
+    "\n",
     "    # Linear interpolation of policy using endogenous grid\n",
     "    def σ(a, z):\n",
     "        return np.interp(a, a_in[:, z], σ_in[:, z])\n",
@@ -628,9 +579,9 @@
     "    \n",
     "    for i, s in enumerate(s_grid[1:]):\n",
     "        i += 1\n",
-    "        for z in range(n):\n",
+    "        for z in range(y_size):\n",
     "            expect = 0.0\n",
-    "            for z_hat in range(n):\n",
+    "            for z_hat in range(y_size):\n",
     "                expect += u_prime(σ(R * s + y_grid[z_hat], z_hat)) * \\\n",
     "                            P[z, z_hat]\n",
     "            c = u_prime_inv(β * R * expect)\n",
@@ -643,21 +594,24 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d5316231",
+   "id": "2a0efb9c",
    "metadata": {
     "hide-output": false
    },
    "outputs": [],
    "source": [
     "def successive_approx_numba(model,        # Class with model information\n",
-    "              tol=1e-5,\n",
-    "              max_iter=100_000,\n",
-    "              verbose=True,\n",
-    "              print_skip=25):\n",
+    "                              tol=1e-5,\n",
+    "                              max_iter=100_000,\n",
+    "                              verbose=True,\n",
+    "                              print_skip=25):\n",
     "\n",
     "    # Unpack\n",
-    "    P, s_grid = model.P, model.s_grid\n",
-    "    n = len(P)\n",
+    "    constants, sizes, arrays = model\n",
+    "    s_size, y_size = sizes\n",
+    "    # make NumPy versions of arrays\n",
+    "    arrays = tuple(map(np.array, arrays))\n",
+    "    s_grid, y_grid, P = arrays\n",
     "    \n",
     "    σ_init = np.repeat(s_grid, y_size)\n",
     "    σ_init = np.reshape(σ_init, (s_size, y_size))\n",
@@ -669,7 +623,7 @@
     "    error = tol + 1\n",
     "\n",
     "    while i < max_iter and error > tol:\n",
-    "        a_new, σ_new = K_egm_nb(a_vec, σ_vec, model)\n",
+    "        a_new, σ_new = K_egm_nb(a_vec, σ_vec, constants, sizes, arrays)\n",
     "        error = np.max(np.abs(σ_vec - σ_new))\n",
     "        i += 1\n",
     "        if verbose and i % print_skip == 0:\n",
@@ -686,7 +640,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "159ea17b",
+   "id": "a817b570",
    "metadata": {},
    "source": [
     "## Solutions\n",
@@ -698,7 +652,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c75ccc69",
+   "id": "987577f5",
    "metadata": {},
    "source": [
     "### Outputs"
@@ -707,30 +661,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "835cc2e5",
+   "id": "a67e85f7",
    "metadata": {
     "hide-output": false
    },
    "outputs": [],
    "source": [
-    "ifp_jax = ifp()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4dbc70cb",
-   "metadata": {
-    "hide-output": false
-   },
-   "outputs": [],
-   "source": [
-    "ifp_numba = IFP()"
+    "model = ifp()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "91fe82aa",
+   "id": "c1d7d635",
    "metadata": {},
    "source": [
     "Here’s a first run of the JAX code."
@@ -739,19 +681,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dac112ee",
+   "id": "035f5b99",
    "metadata": {
     "hide-output": false
    },
    "outputs": [],
    "source": [
-    "a_star_egm_jax, σ_star_egm_jax = successive_approx_jax(ifp_jax,\n",
-    "                                         print_skip=100)"
+    "a_star_egm_jax, σ_star_egm_jax = successive_approx_jax(model,\n",
+    "                                                       print_skip=100)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "41498ad7",
+   "id": "aa14cfab",
    "metadata": {},
    "source": [
     "Next let’s solve the same IFP with Numba."
@@ -760,21 +702,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dd162046",
+   "id": "375873a8",
    "metadata": {
     "hide-output": false
    },
    "outputs": [],
    "source": [
     "qe.tic()\n",
-    "a_star_egm_nb, σ_star_egm_nb = successive_approx_numba(ifp_numba,\n",
-    "                                         print_skip=100)\n",
+    "a_star_egm_nb, σ_star_egm_nb = successive_approx_numba(model,\n",
+    "                                                        print_skip=100)\n",
     "qe.toc()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "a47a7e56",
+   "id": "ae75d88e",
    "metadata": {},
    "source": [
     "Now let’s check the outputs in a plot to make sure they are the same."
@@ -783,15 +725,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "261ffdc7",
+   "id": "fa3aa55e",
    "metadata": {
     "hide-output": false
    },
    "outputs": [],
    "source": [
+    "constants, sizes, arrays = model\n",
+    "β, R, γ = constants\n",
+    "s_size, y_size = sizes\n",
+    "s_grid, y_grid, P = arrays\n",
+    "\n",
+    "\n",
     "fig, ax = plt.subplots()\n",
     "\n",
-    "n = len(ifp_numba.P)\n",
     "for z in (0, y_size-1):\n",
     "    ax.plot(a_star_egm_nb[:, z], \n",
     "            σ_star_egm_nb[:, z], \n",
@@ -808,7 +755,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a6edc171",
+   "id": "9e2a1f56",
    "metadata": {},
    "source": [
     "### Timing\n",
@@ -819,14 +766,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27e049f4",
+   "id": "4aafc735",
    "metadata": {
     "hide-output": false
    },
    "outputs": [],
    "source": [
     "qe.tic()\n",
-    "a_star_egm_jax, σ_star_egm_jax = successive_approx_jax(ifp_jax,\n",
+    "a_star_egm_jax, σ_star_egm_jax = successive_approx_jax(model,\n",
     "                                         print_skip=1000)\n",
     "jax_time = qe.toc()"
    ]
@@ -834,14 +781,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bd867748",
+   "id": "65dd2273",
    "metadata": {
     "hide-output": false
    },
    "outputs": [],
    "source": [
     "qe.tic()\n",
-    "a_star_egm_nb, σ_star_egm_nb = successive_approx_numba(ifp_numba,\n",
+    "a_star_egm_nb, σ_star_egm_nb = successive_approx_numba(model,\n",
     "                                         print_skip=1000)\n",
     "numba_time = qe.toc()"
    ]
@@ -849,7 +796,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0975283d",
+   "id": "3facdd3d",
    "metadata": {
     "hide-output": false
    },
@@ -860,7 +807,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "72179dbf",
+   "id": "a567cc76",
    "metadata": {},
    "source": [
     "The JAX code is significantly faster, as expected.\n",
@@ -871,7 +818,7 @@
   }
  ],
  "metadata": {
-  "date": 1709695940.0411067,
+  "date": 1709777243.7128637,
   "filename": "ifp_egm.md",
   "kernelspec": {
    "display_name": "Python",
