--- a/opt_savings.ipynb
+++ b/opt_savings.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "a7cb7243",
+   "id": "1301ffe6",
    "metadata": {},
    "source": [
     "# Optimal Savings"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e27bf7a2",
+   "id": "40dd4c48",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "21a3ceec",
+   "id": "273d7940",
    "metadata": {
     "hide-output": false
    },
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "558db4d9",
+   "id": "4481b2aa",
    "metadata": {},
    "source": [
     "We will use the following imports:"
@@ -47,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e218acca",
+   "id": "6aa3677a",
    "metadata": {
     "hide-output": false
    },
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "255598c8",
+   "id": "41b21f55",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -72,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "938d822c",
+   "id": "0f1b1199",
    "metadata": {
     "hide-output": false
    },
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "747ad352",
+   "id": "ebc1c96f",
    "metadata": {},
    "source": [
     "Use 64 bit floats with JAX in order to match NumPy code\n",
@@ -95,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "04c43748",
+   "id": "e85c00da",
    "metadata": {
     "hide-output": false
    },
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9096d261",
+   "id": "6a09799f",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e2bf5451",
+   "id": "dd59a12d",
    "metadata": {},
    "source": [
     "## Model primitives\n",
@@ -145,7 +145,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "71eefbff",
+   "id": "fc4a0026",
    "metadata": {
     "hide-output": false
    },
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ba9e1a45",
+   "id": "d0627bb2",
    "metadata": {},
    "source": [
     "Here’s the right hand side of the Bellman equation:"
@@ -182,7 +182,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bdd49f29",
+   "id": "79caa560",
    "metadata": {
     "hide-output": false
    },
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "256e46e2",
+   "id": "8925d0b3",
    "metadata": {},
    "source": [
     "## Operators\n",
@@ -236,7 +236,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cf9d6da1",
+   "id": "7296a174",
    "metadata": {
     "hide-output": false
    },
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e03726c4",
+   "id": "dbaa052f",
    "metadata": {},
    "source": [
     "Now we define the policy operator $ T_\\sigma $"
@@ -274,7 +274,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2d708b87",
+   "id": "e4bc60a1",
    "metadata": {
     "hide-output": false
    },
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b0c9e79b",
+   "id": "e5f4deb0",
    "metadata": {},
    "source": [
     "and the Bellman operator $ T $"
@@ -316,7 +316,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "576777a4",
+   "id": "04eddd8f",
    "metadata": {
     "hide-output": false
    },
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f6425c46",
+   "id": "915332d7",
    "metadata": {},
    "source": [
     "The next function computes a $ v $-greedy policy given $ v $"
@@ -338,7 +338,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e1263560",
+   "id": "6a013b75",
    "metadata": {
     "hide-output": false
    },
@@ -351,7 +351,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eafabd6b",
+   "id": "83f6f249",
    "metadata": {},
    "source": [
     "The function below computes the value $ v_\\sigma $ of following policy $ \\sigma $.\n",
@@ -390,7 +390,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5302165a",
+   "id": "1a5b6b90",
    "metadata": {
     "hide-output": false
    },
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b6002e5c",
+   "id": "236e0462",
    "metadata": {},
    "source": [
     "Now we can define a function to compute $ v_{\\sigma} $"
@@ -432,7 +432,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c0f852f3",
+   "id": "ba95b4e9",
    "metadata": {
     "hide-output": false
    },
@@ -456,7 +456,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "18b3854f",
+   "id": "03eb7d54",
    "metadata": {},
    "source": [
     "## JIT compiled versions"
@@ -465,7 +465,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b97d5d50",
+   "id": "3e719d81",
    "metadata": {
     "hide-output": false
    },
@@ -482,7 +482,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5cc37936",
+   "id": "990192bb",
    "metadata": {},
    "source": [
     "We use successive approximation for VFI."
@@ -491,7 +491,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fe14d4d6",
+   "id": "390db1df",
    "metadata": {
     "hide-output": false
    },
@@ -522,7 +522,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2f174367",
+   "id": "282c4611",
    "metadata": {},
    "source": [
     "## Solvers\n",
@@ -533,7 +533,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e5109198",
+   "id": "06b01a4a",
    "metadata": {
     "hide-output": false
    },
@@ -552,7 +552,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d9faa411",
+   "id": "44d50bee",
    "metadata": {
     "hide-output": false
    },
@@ -577,7 +577,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0f52357f",
+   "id": "edfc6a7f",
    "metadata": {
     "hide-output": false
    },
@@ -600,7 +600,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0ef5e5df",
+   "id": "9470e3a4",
    "metadata": {},
    "source": [
     "## Plots\n",
@@ -611,7 +611,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4bdd44df",
+   "id": "78468634",
    "metadata": {
     "hide-output": false
    },
@@ -629,7 +629,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1739de00",
+   "id": "8fa58eb9",
    "metadata": {
     "hide-output": false
    },
@@ -647,7 +647,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "69376739",
+   "id": "1d9c9eee",
    "metadata": {},
    "source": [
     "## Tests\n",
@@ -658,7 +658,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6844782b",
+   "id": "6ef2af4a",
    "metadata": {
     "hide-output": false
    },
@@ -670,7 +670,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7258c975",
+   "id": "26c4fa88",
    "metadata": {
     "hide-output": false
    },
@@ -686,7 +686,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "75678290",
+   "id": "b6d920e0",
    "metadata": {
     "hide-output": false
    },
@@ -702,7 +702,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bc8a40f3",
+   "id": "a9d48feb",
    "metadata": {
     "hide-output": false
    },
@@ -718,7 +718,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f3a19cb8",
+   "id": "26273b26",
    "metadata": {
     "hide-output": false
    },
@@ -736,7 +736,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ae7eb194",
+   "id": "f9b2ea24",
    "metadata": {
     "hide-output": false
    },
@@ -756,7 +756,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e8f9e416",
+   "id": "cdb08e56",
    "metadata": {
     "hide-output": false
    },
@@ -774,7 +774,7 @@
   }
  ],
  "metadata": {
-  "date": 1709695940.5204628,
+  "date": 1709777244.168797,
   "filename": "opt_savings.md",
   "kernelspec": {
    "display_name": "Python",
